# manul

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
crates/manul_core/: Cargo.toml
crates/manul_core/src/: funtext.rs  lib.rs  utils.rs
crates/manul_logger/: Cargo.toml
crates/manul_logger/src/: lib.rs  logger.rs
crates/manul_pyo3/: Cargo.toml
crates/manul_pyo3/src/: lib.rs
src/manul/: __init__.py  _core.pyi  _logger.pyi  _manul.pyi  version.py
src/manul/_manul/: __init__.py  __init__.pyi  _logger.pyi  _manul.pyi
src/manul/logger/: __init__.py  _functions.py  handler.py
src/manul/utils/: __init__.py
tests/: test_logger.py  test_utils.py
