[workspace]
resolver = "3"
members = [
    "crates/manul_core",
    "crates/manul_logger",
    "crates/manul_pyo3"
]

[workspace.package]
name = "manul"
edition = "2024"
version = "0.1.0"
description = "Rust-powered Python utilities."
license-file = "LICENSE"
repository = "https://github.com/STomoya/manul"

[workspace.dependencies]
pyo3 = { version = "0.28.2" }

manul_core = { path = "crates/manul_core" }
manul_logger = { path = "crates/manul_logger" }
