[package]
name = "manul_core"
version = "0.1.0"
edition.workspace = true
description = "Core utilities for the manul project."
license-file = "../../LICENSE"
repository = "https://github.com/STomoya/manul"
authors = ["STomoya"]

[dependencies]
glob = "0.3.3"
natord = "1.0.9"
pyo3 = { workspace = true, features = ["abi3-py311", "extension-module"] }
textwrap = "0.16.2"
