[package]
name = "manul_pyo3"
version.workspace = true
edition.workspace = true
description = "Python export entrypoints for the manul project."
license-file = "../../LICENSE"
repository = "https://github.com/STomoya/manul"


[lib]
name = "_manul"
crate-type = ["cdylib"]

[dependencies]
manul_core = { workspace = true }
manul_logger = { workspace = true }
pyo3 = { workspace = true, features = ["abi3-py311", "extension-module"] }
